--- a/index.html
+++ b/index.html
@@ -1,7 +1,10 @@
 
 <!DOCTYPE html>
  <HTML>
+  <style>
+  </style>
     <body>
-      <h1>hola Christian</h1>
+      <h1>Leones</h1>
+     <button>Sobre mi</button>
    </body>
  </html>
