--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   </style>
     <body>
       <h1>Leones</h1>
-     <button>Sobre mi</button>
+     <button href="">Sobre mi</button>
+     <button href="">Información</button>
    </body>
  </html>
