--- a/index.html
+++ b/index.html
@@ -2,10 +2,18 @@
 <!DOCTYPE html>
  <HTML>
   <style>
+   h1{
+   color: red;
+   background-color: green;
+   font-size: 2em;
+   font-family:"Helvetica", sans-serif;}
   </style>
     <body>
       <h1>Leones</h1>
      <button href="">Sobre mi</button>
      <button href="">Información</button>
+     <button href="">Habitad</button>
+     <button href="">Galeria</button>
+     <img src="https://th.bing.com/th/id/OIP.cWNGrQLlW3o3LjaT4-f46AHaEY?pid=ImgDet&rs=1" width="500">
    </body>
  </html>
