--- a/index.html
+++ b/index.html
@@ -7,13 +7,19 @@
    background-color: green;
    font-size: 2em;
    font-family:"Helvetica", sans-serif;}
+   .boton{
+   position: relative;
+   with:100px;}
+   .leon{
+   position: relative;
+   width: 250px}
   </style>
     <body>
       <h1>Leones</h1>
-     <button href="">Sobre mi</button>
-     <button href="">Información</button>
-     <button href="">Habitad</button>
-     <button href="">Galeria</button>
-     <img src="https://th.bing.com/th/id/OIP.cWNGrQLlW3o3LjaT4-f46AHaEY?pid=ImgDet&rs=1" width="500">
+     <button class="boton" href="">Sobre mi</button>
+     <button class="boton" href="">Información</button>
+     <button class="boton" href="">Habitad</button>
+     <button class="boton" href="">Galeria</button>
+     <img class="leon" src="https://th.bing.com/th/id/OIP.cWNGrQLlW3o3LjaT4-f46AHaEY?pid=ImgDet&rs=1" width="500">
    </body>
  </html>
