--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
    font-size: 2em;
    font-family:"Helvetica", sans-serif;}
    .boton{
-   position: relative;
+   position: absolute;
    with:100px;}
    .leon{
-   position: relative;
+   position: absolute;
    width: 250px}
   </style>
     <body>
@@ -21,5 +21,7 @@
      <button class="boton" href="">Habitad</button>
      <button class="boton" href="">Galeria</button>
      <img class="leon" src="https://th.bing.com/th/id/OIP.cWNGrQLlW3o3LjaT4-f46AHaEY?pid=ImgDet&rs=1" width="500">
+     <h2>Sobre mi</h2>
+     <p>¡Hola! Mi nombre es Christian, mis amigos me dicen kiki, soy el creador de esta pagina web, sencilla y divertida, soy estudiante de la Universidad del Istmo
    </body>
  </html>
