--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
    with:100px;}
    .leon{
    position: absolute;
-   width: 250px}
+   width: 700px;}
   </style>
     <body>
       <h1>Leones</h1>
@@ -22,6 +22,7 @@
      <button class="boton" href="">Galeria</button>
      <img class="leon" src="https://th.bing.com/th/id/OIP.cWNGrQLlW3o3LjaT4-f46AHaEY?pid=ImgDet&rs=1" width="500">
      <h2>Sobre mi</h2>
-     <p>¡Hola! Mi nombre es Christian, mis amigos me dicen kiki, soy el creador de esta pagina web, sencilla y divertida, soy estudiante de la Universidad del Istmo
+     <p>¡Hola! Mi nombre es <strong>Christian</strong>, mis amigos me dicen <em>kiki</em>, soy el creador de esta pagina web, sencilla y divertida, soy estudiante de la Universidad del Istmo, me gusta mucho el futbol,
+      andar en bici y nadar; si gustas puedes escribirme a mi correo chrisochoam123@gmail.com.</p>
    </body>
  </html>
