--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
    with:100px;}
    .leon{
    position: absolute;
-   width: 700px;}
+   width: 700px;
+   top: 300px;}
   </style>
     <body>
       <h1>Leones</h1>
