--- a/index.html
+++ b/index.html
@@ -8,22 +8,24 @@
    font-size: 2em;
    font-family:"Helvetica", sans-serif;}
    .boton{
-   position: absolute;
+   position: relative;
    with:100px;}
    .leon{
    position: absolute;
    width: 700px;
-   top: 300px;}
+   top: 300px;
+   float:left;}
   </style>
     <body>
       <h1>Leones</h1>
-     <button class="boton" href="">Sobre mi</button>
+     <button class="boton" href="#yo">Sobre mi</button>
      <button class="boton" href="">Información</button>
      <button class="boton" href="">Habitad</button>
      <button class="boton" href="">Galeria</button>
      <img class="leon" src="https://th.bing.com/th/id/OIP.cWNGrQLlW3o3LjaT4-f46AHaEY?pid=ImgDet&rs=1" width="500">
-     <h2>Sobre mi</h2>
+     <h2 id="yo">Sobre mi</h2>
      <p>¡Hola! Mi nombre es <strong>Christian</strong>, mis amigos me dicen <em>kiki</em>, soy el creador de esta pagina web, sencilla y divertida, soy estudiante de la Universidad del Istmo, me gusta mucho el futbol,
       andar en bici y nadar; si gustas puedes escribirme a mi correo chrisochoam123@gmail.com.</p>
+     
    </body>
  </html>
