--- a/index.html
+++ b/index.html
@@ -19,13 +19,21 @@
     <body>
       <h1>Leones</h1>
      <button class="boton" href="#yo">Sobre mi</button>
-     <button class="boton" href="">Información</button>
+     <button class="boton" href="#inf">Información</button>
      <button class="boton" href="">Habitad</button>
      <button class="boton" href="">Galeria</button>
      <img class="leon" src="https://th.bing.com/th/id/OIP.cWNGrQLlW3o3LjaT4-f46AHaEY?pid=ImgDet&rs=1" width="500">
      <h2 id="yo">Sobre mi</h2>
      <p>¡Hola! Mi nombre es <strong>Christian</strong>, mis amigos me dicen <em>kiki</em>, soy el creador de esta pagina web, sencilla y divertida, soy estudiante de la Universidad del Istmo, me gusta mucho el futbol,
       andar en bici y nadar; si gustas puedes escribirme a mi correo chrisochoam123@gmail.com.</p>
+     <h2id="inf">Información</h2>
+     <p>Los leones son los únicos felinos que viven en manada. Las unidades familiares pueden incluir hasta tres machos, una docena de hembras y sus crías. Todas las leonas de una manada están emparentadas y usualmente los pequeñas hembras en su seno se quedan con el grupo a medida que envejecen.
+      Los varones jóvenes sin embargo tarde o temprano abandonan el grupo o son expulsados y establecen su propia manada.</p>
+     
+     <p>Una abundante y frondosa melena rodea su cara y se extiende por el cuello del rey de la selva –solo los machos la poseen: este es su rasgo más característico y único en la familia de los félidos.  Habitan en las sabanas africanas y en una zona reducida del noreste de la India, pero son una especie muy vulnerable pues antiguamente habitaban en otras partes del mundo de las que han ido desapareciendo.
+      Las leonas son las encargadas de salir a cazar mientras que los machos deben defender el territorio de la manada y a sus hembras. Suelen comer grandes mamíferos como ñus, cebras, búfalos o facóceros entre otros, y pueden llegar a vivir aproximadamente unos 15 años. </p>
+     <p>Estos animales han sido venerados a lo largo de la historia por su valor y su fuerza. Una vez pudieron encontrarse en la mayor parte de África y algunas partes de Asia y Europa. Hoy en día sólo se encuentran en ciertos lugares al sur del desierto del Sáhara, a excepción de una población muy pequeña de leones asiáticos que sobrevive en el bosque Gir de la India.
+      Aquí tienes una galería fotográfica con decenas de imágenes de leones.</p>
      
    </body>
  </html>
