--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
   </style>
     <body>
       <h1>Leones</h1>
-     <button class="boton" href="#yo">Sobre mi</button>
+     <a href="#" class="yo">Sobre mi</a>
      <button class="boton" href="#inf">Información</button>
-     <button class="boton" href="">Habitad</button>
+     <button class="boton" href="habitad">Habitad</button>
      <button class="boton" href="">Galeria</button>
      <img class="leon" src="https://th.bing.com/th/id/OIP.cWNGrQLlW3o3LjaT4-f46AHaEY?pid=ImgDet&rs=1" width="500">
      <h2 id="yo">Sobre mi</h2>
@@ -34,6 +34,7 @@
       Las leonas son las encargadas de salir a cazar mientras que los machos deben defender el territorio de la manada y a sus hembras. Suelen comer grandes mamíferos como ñus, cebras, búfalos o facóceros entre otros, y pueden llegar a vivir aproximadamente unos 15 años. </p>
      <p>Estos animales han sido venerados a lo largo de la historia por su valor y su fuerza. Una vez pudieron encontrarse en la mayor parte de África y algunas partes de Asia y Europa. Hoy en día sólo se encuentran en ciertos lugares al sur del desierto del Sáhara, a excepción de una población muy pequeña de leones asiáticos que sobrevive en el bosque Gir de la India.
       Aquí tienes una galería fotográfica con decenas de imágenes de leones.</p>
+     <h2 id="habitad">Habitad</h2>
      
    </body>
  </html>
