--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
    position: relative;
    with:100px;}
    .leon{
-   position: absolute;
+   position: relative;
    width: 700px;
    top: 150px;
    float: left;}
