--- a/index.html
+++ b/index.html
@@ -14,12 +14,13 @@
    position: relative;
    width: 700px;
    top: 150px;
-   float: left;}
+   float: left;
+   padding: 15px;}
   </style>
     <body>
       <h1>Leones</h1>
-     <a href="#" class="yo">Sobre mi</a>
-     <button class="boton" href="#inf">Información</button>
+     <a href="#" class="yo boton">Sobre mi</a>
+     <a href="#" class="inf boton">nformación</a>
      <button class="boton" href="habitad">Habitad</button>
      <button class="boton" href="">Galeria</button>
      <img class="leon" src="https://th.bing.com/th/id/OIP.cWNGrQLlW3o3LjaT4-f46AHaEY?pid=ImgDet&rs=1" width="500">
