--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
    .leon{
    position: relative;
    width: 700px;
-   top: 150px;
+   top: 50px;
    float: left;
    padding: 15px;}
   </style>
@@ -21,8 +21,8 @@
       <h1>Leones</h1>
      <a href="#" class="yo boton">Sobre mi</a>
      <a href="#" class="inf boton">nformación</a>
-     <button class="boton" href="habitad">Habitad</button>
-     <button class="boton" href="">Galeria</button>
+     <a href="#" class="hab boton">Habitad</a>
+     <a href="#" class="gal boton">Galeria</a>
      <img class="leon" src="https://th.bing.com/th/id/OIP.cWNGrQLlW3o3LjaT4-f46AHaEY?pid=ImgDet&rs=1" width="500">
      <h2 id="yo">Sobre mi</h2>
      <p>¡Hola! Mi nombre es <strong>Christian</strong>, mis amigos me dicen <em>kiki</em>, soy el creador de esta pagina web, sencilla y divertida, soy estudiante de la Universidad del Istmo, me gusta mucho el futbol,
