--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
    .leon{
    position: relative;
    width: 700px;
-   top: 50px;
+   top: 15px;
    float: left;
    padding: 15px;}
   </style>
@@ -35,7 +35,8 @@
       Las leonas son las encargadas de salir a cazar mientras que los machos deben defender el territorio de la manada y a sus hembras. Suelen comer grandes mamíferos como ñus, cebras, búfalos o facóceros entre otros, y pueden llegar a vivir aproximadamente unos 15 años. </p>
      <p>Estos animales han sido venerados a lo largo de la historia por su valor y su fuerza. Una vez pudieron encontrarse en la mayor parte de África y algunas partes de Asia y Europa. Hoy en día sólo se encuentran en ciertos lugares al sur del desierto del Sáhara, a excepción de una población muy pequeña de leones asiáticos que sobrevive en el bosque Gir de la India.
       Aquí tienes una galería fotográfica con decenas de imágenes de leones.</p>
-     <h2 id="habitad">Habitad</h2>
+     <h2 id="hab">Habitad</h2>
+     
      
    </body>
  </html>
