--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
   </style>
     <body>
       <h1>Leones</h1>
-     <a href="#" class="yo boton">Sobre mi</a>
-     <a href="#" class="inf boton">nformación</a>
-     <a href="#" class="hab boton">Habitad</a>
-     <a href="#" class="gal boton">Galeria</a>
+     <a href="#" class="yo">Sobre mi</a>
+     <a href="#" class="inf">nformación</a>
+     <a href="#" class="hab">Habitad</a>
+     <a href="#" class="gal">Galeria</a>
      <img class="leon" src="https://th.bing.com/th/id/OIP.cWNGrQLlW3o3LjaT4-f46AHaEY?pid=ImgDet&rs=1" width="500">
      <h2 id="yo">Sobre mi</h2>
      <p>¡Hola! Mi nombre es <strong>Christian</strong>, mis amigos me dicen <em>kiki</em>, soy el creador de esta pagina web, sencilla y divertida, soy estudiante de la Universidad del Istmo, me gusta mucho el futbol,
@@ -42,6 +42,14 @@
      <p>El territorio de sub Sahara de África y Asia es donde se encuentra el león. Viven entre la sabana y los pastizales, a menudo en zonas extremadamente secas y calurosas durante la mayor parte del año. Aunque a veces lo hacen entre regiones pobladas, e incluso en zonas bajas de montañas.
       Tal vez deban trasladarse a las zonas que diferentes con el fin de sobrevivir cuando las fuentes de alimentos son bajas y el hábitat ha sido destruido.</p>
      <p>Por lo general no viven en regiones de densos bosques, debido al hecho de que en estos lugares no existen suficientes alimentos para alimentar la manada.</p>
+     <p>Sin embargo, machos y hembras solitarios pueden encontrarse en estos lugares, donde pueden encontrar presas lo suficientemente pequeñas como para sobrevivir.
+      La caza de presas más grandes, generalmente, las realizan en grupo.</p>
+     <p>En muchas zonas los leones han tenido que cambiar sus ubicaciones y como resultado se encuentran en lugares donde nunca habían vivido. Cuando los animales de los que se alimentan se desplazan a nuevos ambientes, no tienen más remedio que seguirlos. 
+      Sin tales fuentes de alimentos no tienen absolutamente ninguna manera de sobrevivir en la naturaleza.</p>
+     <p>Una de las mayores razones por las que el futuro para el león es tan incierto, se debe al hecho de que su hábitat sigue siendo destruido. En muchas zonas donde aún viven los leones tienen que viajar grandes distancias para poder encontrar el alimento.
+      El alimento pudo, una vez, estar disponible en esos lugares, pero los esfuerzos de los seres humanos hacen muy difícil la situación actual del león.</p>
+     <p>Otro problema es que el león es susceptible a las garrapatas y la tenia en su hábitat natural. Se cree que desarrollan parásitos a partir de la carne del antílope que consumen.
+      Existen varios virus a los que son vulnerables también, y estas cuestiones pueden afectar gravemente a la salud del león en su hábitat natural.</p>
      
      
    </body>
