--- a/index.html
+++ b/index.html
@@ -59,8 +59,9 @@
     <br>
      <br>
      <h2>Galeria</h2>
-     <img src="https://www.bing.com/images/search?view=detailV2&ccid=84jxS6fl&id=C0F15020F4CC7F50DB402487B8A0E1C453D43BC5&thid=OIP.84jxS6fluiGxUfRc14YGXwHaEO&mediaurl=https%3a%2f%2fimg-aws.ehowcdn.com%2f877x500p%2fphotos.demandstudios.com%2f27%2f250%2ffotolia_706395_XS.jpg&cdnurl=https%3a%2f%2fth.bing.com%2fth%2fid%2fR.f388f14ba7e5ba21b151f45cd786065f%3frik%3dxTvUU8ThoLiHJA%26pid%3dImgRaw%26r%3d0&exph=500&expw=877&q=habitad+leones&simid=607987122703196008&FORM=IRPRST&ck=1F11742D3AF94CFF1331D71D1A54CDDF&selectedIndex=3&ajaxhist=0&ajaxserp=0">
+     <img src="https://th.bing.com/th/id/OIP.TvBP6uNc1xOI0y5tS0Y98QHaE8?pid=ImgDet&w=600&h=400&rs=1">
      <img src="https://anneinafrica.files.wordpress.com/2009/03/kabwe-internatl-womens-day-retreat-030.jpg?w=900">
+     <img src="https://th.bing.com/th/id/OIP.VU75Q3w2h96z_OgEaUJA7AHaFS?pid=ImgDet&w=900&h=642&rs=1">
      
      
    </body>
