--- a/index.html
+++ b/index.html
@@ -16,6 +16,10 @@
    top: 15px;
    float: left;
    padding: 15px;}
+   h2{
+   color: yellow;
+   background-color: grey;
+   font-family:"fantasy" sans-serif}
   </style>
     <body>
       <h1>Leones</h1>
@@ -32,14 +36,14 @@
      <p>Los leones son los únicos felinos que viven en manada. Las unidades familiares pueden incluir hasta tres machos, una docena de hembras y sus crías. Todas las leonas de una manada están emparentadas y usualmente los pequeñas hembras en su seno se quedan con el grupo a medida que envejecen.
       Los varones jóvenes sin embargo tarde o temprano abandonan el grupo o son expulsados y establecen su propia manada.</p>
      <br>
-     <p>Una abundante y frondosa melena rodea su cara y se extiende por el cuello del rey de la selva –solo los machos la poseen: este es su rasgo más característico y único en la familia de los félidos.  Habitan en las sabanas africanas y en una zona reducida del noreste de la India, pero son una especie muy vulnerable pues antiguamente habitaban en otras partes del mundo de las que han ido desapareciendo.
+     <p>Una abundante y frondosa melena rodea su cara y se extiende por el cuello del <strong>rey de la selva</strong> –solo los machos la poseen: este es su rasgo más característico y único en la familia de los félidos.  Habitan en las sabanas africanas y en una zona reducida del noreste de la India, pero son una especie muy vulnerable pues antiguamente habitaban en otras partes del mundo de las que han ido desapareciendo.
       Las leonas son las encargadas de salir a cazar mientras que los machos deben defender el territorio de la manada y a sus hembras. Suelen comer grandes mamíferos como ñus, cebras, búfalos o facóceros entre otros, y pueden llegar a vivir aproximadamente unos 15 años. </p>
      <p>Estos animales han sido venerados a lo largo de la historia por su valor y su fuerza. Una vez pudieron encontrarse en la mayor parte de África y algunas partes de Asia y Europa. Hoy en día sólo se encuentran en ciertos lugares al sur del desierto del Sáhara, a excepción de una población muy pequeña de leones asiáticos que sobrevive en el bosque Gir de la India.
       Aquí tienes una galería fotográfica con decenas de imágenes de leones.</p>
      <br>
      <br>
      <h2 id="hab">Habitad</h2>
-     <p>El territorio de sub Sahara de África y Asia es donde se encuentra el león. Viven entre la sabana y los pastizales, a menudo en zonas extremadamente secas y calurosas durante la mayor parte del año. Aunque a veces lo hacen entre regiones pobladas, e incluso en zonas bajas de montañas.
+     <p>El territorio de sub Sahara de <em>África y Asia</em> es donde se encuentra el león. Viven entre la sabana y los pastizales, a menudo en zonas extremadamente secas y calurosas durante la mayor parte del año. Aunque a veces lo hacen entre regiones pobladas, e incluso en zonas bajas de montañas.
       Tal vez deban trasladarse a las zonas que diferentes con el fin de sobrevivir cuando las fuentes de alimentos son bajas y el hábitat ha sido destruido.</p>
      <br>
      <p>Por lo general no viven en regiones de densos bosques, debido al hecho de que en estos lugares no existen suficientes alimentos para alimentar la manada.</p>
@@ -50,7 +54,7 @@
      <p>En muchas zonas los leones han tenido que cambiar sus ubicaciones y como resultado se encuentran en lugares donde nunca habían vivido. Cuando los animales de los que se alimentan se desplazan a nuevos ambientes, no tienen más remedio que seguirlos. 
       Sin tales fuentes de alimentos no tienen absolutamente ninguna manera de sobrevivir en la naturaleza.</p>
      <br>
-     <p>Una de las mayores razones por las que el futuro para el león es tan incierto, se debe al hecho de que su hábitat sigue siendo destruido. En muchas zonas donde aún viven los leones tienen que viajar grandes distancias para poder encontrar el alimento.
+     <p>Una de las mayores razones por las que <strong>el futuro para el león es tan incierto</strong>, se debe al hecho de que su hábitat sigue siendo destruido. En muchas zonas donde aún viven los leones tienen que viajar grandes distancias para poder encontrar el alimento.
       El alimento pudo, una vez, estar disponible en esos lugares, pero los esfuerzos de los seres humanos hacen muy difícil la situación actual del león.</p>
      <br>
      <p>Otro problema es que el león es susceptible a las garrapatas y la tenia en su hábitat natural. Se cree que desarrollan parásitos a partir de la carne del antílope que consumen.
