--- a/index.html
+++ b/index.html
@@ -23,16 +23,16 @@
   </style>
     <body>
       <h1>Leones</h1>
-     <a href="#" class="yo">Sobre mi</a>
+     <a href="#yo">Sobre mi</a>
      <a href="#" class="inf">nformación</a>
-     <a href="#" class="hab">Habitad</a>
+     <a href="#hab">Habitad</a>
      <a href="#" class="gal">Galeria</a>
      <img class="leon" src="https://th.bing.com/th/id/OIP.cWNGrQLlW3o3LjaT4-f46AHaEY?pid=ImgDet&rs=1" width="500">
      <h2 id="yo">Sobre mi</h2>
      <p>¡Hola! Mi nombre es <strong>Christian</strong>, mis amigos me dicen <em>kiki</em>, soy el creador de esta pagina web, sencilla y divertida, soy estudiante de la Universidad del Istmo, me gusta mucho el futbol,
       andar en bici y nadar; si gustas puedes escribirme a mi correo chrisochoam123@gmail.com.</p>
      <br>
-     <h2id="inf">Información</h2>
+     <h2 id="inf">Información</h2>
      <p>Los leones son los únicos felinos que viven en manada. Las unidades familiares pueden incluir hasta tres machos, una docena de hembras y sus crías. Todas las leonas de una manada están emparentadas y usualmente los pequeñas hembras en su seno se quedan con el grupo a medida que envejecen.
       Los varones jóvenes sin embargo tarde o temprano abandonan el grupo o son expulsados y establecen su propia manada.</p>
      <br>
