--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
     <body>
       <h1>Leones</h1>
      <a href="#yo">Sobre mi</a>
-     <a href="#" class="inf">nformación</a>
+     <a href="#inf">nformación</a>
      <a href="#hab">Habitad</a>
-     <a href="#" class="gal">Galeria</a>
+     <a href="#gal">Galeria</a>
      <img class="leon" src="https://th.bing.com/th/id/OIP.cWNGrQLlW3o3LjaT4-f46AHaEY?pid=ImgDet&rs=1" width="500">
      <h2 id="yo">Sobre mi</h2>
      <p>¡Hola! Mi nombre es <strong>Christian</strong>, mis amigos me dicen <em>kiki</em>, soy el creador de esta pagina web, sencilla y divertida, soy estudiante de la Universidad del Istmo, me gusta mucho el futbol,
