--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
    font-family:"fantasy" sans-serif}
   </style>
     <body>
-      <h1>Leones</h1>
+      <h1 id="ini">Leones</h1>
      <a href="#yo">Sobre mi</a>
      <a href="#inf">nformación</a>
      <a href="#hab">Habitad</a>
@@ -66,6 +66,7 @@
      <img src="https://th.bing.com/th/id/OIP.TvBP6uNc1xOI0y5tS0Y98QHaE8?pid=ImgDet&w=600&h=400&rs=1">
      <img src="https://anneinafrica.files.wordpress.com/2009/03/kabwe-internatl-womens-day-retreat-030.jpg?w=900">
      <img src="https://th.bing.com/th/id/OIP.VU75Q3w2h96z_OgEaUJA7AHaFS?pid=ImgDet&w=900&h=642&rs=1">
+      <a href="#ini">Inicio</a>
      
      
    </body>
