--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
      
     <br>
      <br>
-     <h2>Galeria</h2>
+     <h2 id="gal">Galeria</h2>
      <img src="https://th.bing.com/th/id/OIP.TvBP6uNc1xOI0y5tS0Y98QHaE8?pid=ImgDet&w=600&h=400&rs=1">
      <img src="https://anneinafrica.files.wordpress.com/2009/03/kabwe-internatl-womens-day-retreat-030.jpg?w=900">
      <img src="https://th.bing.com/th/id/OIP.VU75Q3w2h96z_OgEaUJA7AHaFS?pid=ImgDet&w=900&h=642&rs=1">
